fixed nav spacing issues

--- a/styles/about.css
+++ b/styles/about.css
@@ -7,8 +7,8 @@
 }
 
 .ham {
-  height: 4vw;
-  width: 4vw;
+  height: min(4vw, 65px);
+  width: min(4vw, 65px);
   position: absolute;
   z-index: 2;
   right: 2vw;
@@ -65,7 +65,7 @@
     backdrop-filter: blur(5px);
 
     transition: width 0.5s ease-in-out;
-    font-size: max(4.5vw, 60px);
+    font-size: max(4.5vw, 30px);
     /* box-shadow: 0 0 10px rgb(14, 14, 14); */
 
     & h1 {
@@ -88,12 +88,12 @@
       justify-content: center;
       gap: 1.5vw;
       height: 100%;
-      width: 35%;
+      width: min(35%, 225px);
       margin: 0 auto;
     }
 
     & li {
-      font-size: max(1.75vw, 22px);
+      font-size: clamp(24px, 1.75vw, 30px);
       cursor: pointer;
       position: relative;
       width: auto;
@@ -416,7 +416,7 @@
   }
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 900px) {
   .foldout h1 {
     display: none;
   }
